[package]
name = "m68k-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2          # Include debug symbols

[profile.dev]
opt-level = 1         # Currently doesn't run with 0 optimisation :-/

[dependencies]

[[bin]]
name = "m68k-rust"
path = "src/main.rs"
test = false
doctest = false
bench = false
